/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.infra.client.longrunningservice;

option java_package = "com.google.devtools.mobileharness.infra.client.longrunningservice.proto";
option java_outer_classname = "LogProto";

message LogRecords {
  repeated LogRecord log_record = 1;
}

message LogRecord {
  // Required.
  //
  // The record should contain "\n".
  string formatted_log_record = 1;

  // Required.
  SourceType source_type = 2;

  enum SourceType {
    UNSPECIFIED_SOURCE_TYPE = 0;
    // The log record is from logger of the process itself.
    SELF = 1;
    // The log record is from TF process.
    TF = 2;
  }
}
